Add Python 3 compatiblity.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,13 @@
 [buildout]
 develop = .
-parts = test py
+parts = test test3 py
 
 [test]
+recipe = zc.recipe.testrunner
+eggs = zc.customdoctests [test,js]
+
+[test3]
+# python-spidermonkey does not run on Python 3 yet.
 recipe = zc.recipe.testrunner
 eggs = zc.customdoctests [test]
 
